--- a/app/public/survey.html
+++ b/app/public/survey.html
@@ -179,7 +179,7 @@
                 <div class="modal-body">
                     <h2 id="match-name"></h2>
                     <img id="match-img"
-                        src="" alt="oops">
+                        src="" alt="No Image!" style = "width: 400px">
                 </div>
                 <div class="modal-footer">
                     <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
@@ -235,7 +235,6 @@
                 console.log(userData)
                 // AJAX post the data to the friends API.
                 $.post("/api/friends", userData, function (data) {
-
                     // Grab the result from the AJAX post so that the best match's name and photo are displayed.
                     $("#match-name").text(data.name);
                     $("#match-img").attr("src", data.photo);
